--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div id='image'><img src="https://upload.wikimedia.org/wikipedia/commons/7/76/Russian_passport_photo.JPG" alt="My picture"></div>
             <div id='header'>
                 <h2 id = 'name'>John Doe</h2>
-                <h3 id= 'email'><a href="#" target="_blank">bigmanjohn@gmail.com</a></h3>
+                <h3 id= 'email'><a href="#" target="_blank"><span id='email2'>bigmanjohn@gmail.com</span></a></h3>
             </div>
             <div class='career-objective'><p>To secure a challenging position in a reputable organization to expand my learnings, knowledge, and skills.</p></div>
             <div class='cv-highlights'>
